2016-11-21 Even Rouault <even dot rouault at spatialys dot com>

	* geo_print.c: secure sscanf()/fscanf() uses.

2016-11-20 Even Rouault <even dot rouault at spatialys dot com>

	* geo_simpletags.c: add cppcheck-suppress duplicateBranch annotation.

2016-09-04 Even Rouault <even dot rouault at spatialys dot com>

	* White space fixes in .h and .c

2016-09-01 Even Rouault <even dot rouault at spatialys dot com>

	* geotiff.h cpl_serv.h: Partial revert of r2736 to revert back including
	 "geo_config.h" (#81)

2016-08-18 Even Rouault <even dot rouault at spatialys dot com>

	* Makefile.am: Fix build issue on Windows with cmake by not
	including generate geo_config.h in the dist .zip/.tar.gz
	* geotiff.h cpl_serv.h: change #include "geo_config.h" to #include <geo_config.h>
	* cpl_serv.h: do not include <strings.h> on _WIN32 even if HAVE_STRINGS_H is defined
	* cpl_config.h.vc: remove #define HAVE_STRINGS_H 1
	* cpl_serv.c: remove includes of string.h and strings.h. Already done by cpl_serv.h 
	* Prepare for 1.4.2RC4

2016-08-17 Even Rouault <even dot rouault at spatialys dot com>

	* Prepare for 1.4.2RC3

2016-08-17 Howard Butler <howard@hobu.co>

	* csv: update to EPSG v8.9

2016-08-16 Even Rouault <even dot rouault at spatialys dot com>

	* Makefile.am: add subdir-objects to AUTOMAKE_OPTIONS. Patch by
	Bas Couwenberg (#80)

2016-08-16 Even Rouault <even dot rouault at spatialys dot com>

	* add autogen.sh in extradist
	* run it on a newer system
	* prepare for 1.4.2RC2

2016-08-16 Even Rouault <even dot rouault at spatialys dot com>

    * make dist: include files in docs/ directory (#78)

2016-08-16 Even Rouault <even dot rouault at spatialys dot com>

    * CMake: install man pages

2016-08-16 Even Rouault <even dot rouault at spatialys dot com>

    * Add manpages for applygeo & geotifcp, also fix listgeo manpage. Patch by
    Bas Couwenberg

2016-08-16 Even Rouault <even dot rouault at spatialys dot com>
